--- a/test_manus/manual.bib
+++ b/test_manus/manual.bib
@@ -39,6 +39,22 @@ volume = {100},
 year = {2021}
 }
 
+@article{Eyvindson2018,
+abstract = {{\textcopyright} 2018, Canadian Science Publishing. All rights reserved. Managing forest resources occurs under various sources of uncertainty. Depending on the management problem, this uncertainty may have a substantial impact on the quality of the solution. As our knowledge on the sources and magnitude of uncertainty improves, integrating this knowledge into the development of management plans becomes increasingly useful, as additional information can improve the decision-making process. This adjustment requires a fundamental shift in how planning problems are viewed: instead of interpreting risk management as a technique needed only for addressing problems with natural hazards, risk management should be an integral part of most planning problems. Managing risks can be linked to a variety of adaptive planning methods: to help mitigate risk, either plans should be revised as new information becomes available or the possibility of adaptation should be accounted for in preparing the plans. We conduct a brief examination of the key topics in risk management and highlight how risk management implies trade-offs. Several decision problems that incorporate risk management are analyzed, and alternative perspectives for the problem are suggested to better address risk management issues. We then provide a decision framework for considering how to integrate risk management practices into the forest planning process.},
+author = {Eyvindson, Kyle and Kangas, Annika},
+doi = {10.1139/cjfr-2017-0251},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Eyvindson, Kangas - 2018 - Guidelines for risk management in forest planning — what is risk and when is risk management useful.pdf:pdf},
+issn = {0045-5067},
+journal = {Canadian Journal of Forest Research},
+keywords = {adaptive planning,am{\'{e}}liore,am{\'{e}}nagement,am{\'{e}}nagement des ressources foresti{\`{e}}res,cette incertitude peut avoir,comporte diff{\'{e}}rentes sources d,conditional value at risk,connaissance,d,des sources d,d{\'{e}}pendamment du probl{\`{e}}me,en plus utile d,il est de plus,importance s,incertitude,incertitude et de leur,int{\'{e}}grer cette connaissance dans,l,la qualit{\'{e}} de la,risk,risk management,r{\'{e}}sum{\'{e}},solution,un impact majeur sur,uncertainty,{\`{a}} mesure que notre},
+number = {4},
+pages = {309--316},
+title = {{Guidelines for risk management in forest planning — what is risk and when is risk management useful?}},
+volume = {48},
+year = {2018}
+}
+
+
 @misc{RDevelopmentCoreTeam2019,
 abstract = {R Core Team (2015). R: A language and environment for statistical computing. R Foundation for Statistical Computing, Vienna, Austria. ISBN 3-900051-07-0, URL http://www.R-project.org/.},
 address = {Vienna, Austria},
@@ -52,4 +68,19 @@ publisher = {R Foundation for Statistical Computing},
 title = {{R: A language and environment for statistical computing}},
 url = {http://www.r-project.org/.},
 year = {2019}
+}
+
+@article{Rasinmaki2009,
+abstract = {Forest management planning is facing new objectives and diversified data sources. To succeed in the new context, a forest management planning framework should support integration of the new goals, knowledge, and technology as well as embrace multiple scales. The aim of the SIMO framework is to develop a hierarchical, extendable simulation and optimization framework for forest management planning. Current implementation includes a forest growth and yield simulator which is adaptable with respect to the components of a simulation; data, growth and operation models that modify the data, and the control structures between the data and the models. The simulation framework components implemented in XML include the hierarchical structures for data and simulation descriptions, and an extendable model base. To achieve flexibility and reusability, the components are connected through a common ontology, again defined in XML. The article includes two use cases demonstrating the adaptability of the simulation framework, which is available as open source software. {\textcopyright} 2008 Elsevier B.V. All rights reserved.},
+author = {Rasinm{\"{a}}ki, Jussi and M{\"{a}}kinen, Antti and Kalliovirta, Jouni},
+doi = {10.1016/j.compag.2008.12.007},
+file = {:/fileservices.ad.jyu.fi/homes/mpotterf/My Documents/Mendeley Desktop/Rasinm{\"{a}}ki, M{\"{a}}kinen, Kalliovirta - 2009 - SIMO An adaptable simulation framework for multiscale forest resource data.pdf:pdf},
+issn = {01681699},
+journal = {Computers and Electronics in Agriculture},
+keywords = {Forest management planning,Growth and yield simulation,Hierarchical,Modular,XML},
+number = {1},
+pages = {76--84},
+title = {{SIMO: An adaptable simulation framework for multiscale forest resource data}},
+volume = {66},
+year = {2009}
 }
