--- a/test_manus/test_manus.tex
+++ b/test_manus/test_manus.tex
@@ -122,9 +122,6 @@ Jyvaskyla, P.O. Box 35, FI-40014 Jyvaskyla, Finland}
 
 \newpage
 
-\emph{Text based on elsarticle sample manuscript, see
-\url{http://www.elsevier.com/author-schemas/latex-instructions\#elsarticle}}
-
 \section{Introduction}\label{introduction}
 
 The current times are challenging to balance between forest productivity
@@ -210,7 +207,7 @@ optimization to landscape level stand configurations.\label{workflow}}
 
 \section{Methods}\label{methods}
 
-\subsubsection{Study area}\label{study-area}
+\paragraph{Study area}\label{study-area}
 
 Our study area represents a typical Finnish production forested
 landscape with relatively structurally homogenous forests stands. In
@@ -233,7 +230,7 @@ study (Fig. \ref{workflow}), please refer for more details).
 comprising 1475 forest stands.\label{study_area}}
 \end{figure}
 
-\subsubsection{Forest stand development under different
+\paragraph{Forest stand development under different
 regimes}\label{forest-stand-development-under-different-regimes}
 
 We simulated the development of the forests stands using SIMO forest
@@ -254,7 +251,7 @@ less fertile sites to 22m2/ha for fertile sites) prior to harvesting was
 modified by -3, ±0, +3, +6, and we delayed the timing of the first
 harvest in 5 year increments up to a delay of 45 years.
 
-\subsubsection{Optimization}\label{optimization}
+\paragraph{Optimization}\label{optimization}
 
 The collection of the optimal management regimes explore the trade-offs
 between between net present income (NPI) and forest multifunctionality.
@@ -276,7 +273,7 @@ allowed us to reconstruct the dynamics landscape development over time
 under combination of management regimes, and harvest extraction
 gradient.
 
-\subsubsection{Wind risk calculation}\label{wind-risk-calculation}
+\paragraph{Wind risk calculation}\label{wind-risk-calculation}
 
 We have calculated the probability of wind damage based on Suvanto et
 al. (2019) binomial generalized linear model with logit-link function
@@ -294,7 +291,7 @@ be only partial to the stand. To process the datasets, calculate damage
 probability models and visualize results we used R Development Core Team
 (2019).
 
-\subsubsection{Data processing}\label{data-processing}
+\paragraph{Data processing}\label{data-processing}
 
 We calculated the probability of wind damage based on stand level for
 each stand, scenario and time intervals. First, we evaluated wind damage
@@ -314,8 +311,8 @@ species compositions.
 
 \section{Results}\label{results}
 
-\subsubsection{Landscape level wind risk under management restriction
-and harvest intensity
+\paragraph{Landscape level wind risk under management restriction and
+harvest intensity
 scenarios}\label{landscape-level-wind-risk-under-management-restriction-and-harvest-intensity-scenarios}
 
 The set-aside landscape level management resulted at the same mean
@@ -337,8 +334,7 @@ set-aside stands.
 over harvest intensity gradient}
 \end{figure}
 
-\subsubsection{Timber volume at wind
-risk}\label{timber-volume-at-wind-risk}
+\paragraph{Timber volume at wind risk}\label{timber-volume-at-wind-risk}
 
 Increasing harvesting levels lowers the amount of the available timber
 at any time step to be lost due to windthrows. Interestingly, the CCF
@@ -350,8 +346,8 @@ between two extremities. The highest mean log timber volume as available
 for the wind damage at lowest harvesting levels. Interestingly, under
 RF, low levels of timber extraction increase levels of the pupl standing
 volume. The highest amount of harvested log wood is produced by CCF
-regimes, while RF dominates in harvesting pulp timber (Fig.
-\ref(fig\_4\_plot\_V\_timber)).
+regimes, while RF dominates in harvesting pulp timber
+@ref(fig:fig\_4\_plot\_V\_timber).
 
 \begin{figure}
 \centering
@@ -366,9 +362,10 @@ proportion among standing log and pulp volume remains at the same rate
 (65:30) where the production of the log timber dominates. At the highest
 intensity of timber extraction, pulp wood creates up to 50\% of teh
 total standing volume See figure
-@ref(fig:fig\_5\_proportion\_V\_pulp\_log).
+@ref(fig:fig\_5\_proportion\_V\_pulp\_log) NEW FIG
+@ref(fig\_5\_proportion\_V\_pulp\_log).
 
-\subsubsection{Open stands frequency}\label{open-stands-frequency}
+\paragraph{Open stands frequency}\label{open-stands-frequency}
 
 RF regimes increase the amount of stands with open edge with increasing
 harvest intensity while CCF regimes maintain the same amount of open
@@ -382,7 +379,7 @@ number of stands with open edge by 5\%.
 gradient}
 \end{figure}
 
-\subsubsection{Changes in species
+\paragraph{Changes in species
 composition}\label{changes-in-species-composition}
 
 The intensification of the harvesting changes the stand species
